Se modifico las razas de los perros en el cargar adopcion, se agrego la funcion de cargar/mostrar las donaciones realizadas por el usuario, se agrego un Mi Perfil para mostrar los datos del usuario y en el cerrar sesion se agrego una funcion para borrar algunos datos del localStorage para que no traigan inconvenientes

--- a/cargarAdopcion.html
+++ b/cargarAdopcion.html
@@ -45,15 +45,15 @@
 		</header>
 
 		<div class="body-contenedor">
-			<form id="formulario" action="adopciones.html" method="post">        <!-- redirige a la pagina de adopciones-->
+			<form id="formulario" action="adopciones.html" method="post">        
 				<label class="form-label">Registrar adopción</label><br><br>
 				Raza:
 				<select name="raza_perro" class="input-style" required>
-					<option value="mestizo">Mestizo</option>
-					<option value="caniche">Caniche</option>
-					<option value="pitbull">Pitbull</option>					
-					<option value="labrador">Labrador</option>
-					<option value="salchicha">Salchicha</option>
+					<option value="Mestizo">Mestizo</option>
+					<option value="Caniche">Caniche</option>
+					<option value="Bulldog">Bulldog</option>					
+					<option value="Labrador Retriever">Labrador Retriever</option>
+					<option value="Golden Retriever">Dogo Argentino</option>
 				</select><br>
 				Sexo:
                 <select name="sexo" class="input-style"  required>
