--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 							<option class="option-select-menu" value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
+							<option class="option-select-menu" value="mostrarDonaciones.html">Mostrar Donaciones</option>
 							<option class="option-select-menu listar-turnos" value="listar-mis-turnos.html">Listar mis turnos</option>
 							<option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
 							<option class="option-select-menu" value="formCampaniaDonacion.html">Registrar campaña de donacion</option>
