--- a/mostrarUsuarios.html
+++ b/mostrarUsuarios.html
@@ -41,6 +41,13 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
 					<div class="border"></div>
+					<li><a class="link-style-menu stateLogOut" id="bienvenida">Bienvenido:</a></li>
+					<div class="border"></div>
+					<script>
+						if (localStorage.getItem('email') !== null){
+							document.getElementById('bienvenida').innerHTML = 'Bienvenido<br>' + localStorage.getItem('email');
+						}
+					</script>
 				</ul>
 			</div>
 		</header>
