--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</header>
 
 	</body>
-	<script src="js/obtenerIdUrlConForm.js"></script>
+	<script src="js/actualizarUrls.js" type="module"></script>
 	<script src="js/cambiarEstadoBotones.js"></script>	
 	<script src="js/cerrarSesion.js"></script>
 </html>
