--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -59,7 +59,7 @@
 		</header>
 
 		<div class="body-sign-in-and-up">
-            <form id="formulario" action="php/solicitar-turno.php?id=" method="post" onsubmit="return validarFecha()" >
+            <form id="formulario" action="php/solicitar-turno.php" method="post" onsubmit="return validarFecha()" >
                 <label class="form-label">Solicitar turno</label><br>
                 <input type="date" id="fecha" name="fecha" class="input-style" placeholder="Fecha" required><br>
                 Servicio:
@@ -84,7 +84,6 @@
             </form>
         </div>
     </body>
-	<script src="js/obtenerIdUrlConForm.js"></script>
     <script src="js/cambiarEstadoBotones.js"></script>	
 	<script src="js/cerrarSesion.js"></script>
 </html>
