--- a/sign-in.html
+++ b/sign-in.html
@@ -25,6 +25,7 @@
 							<option value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option value="verAdopciones.html">Mostrar Adopciones</option>
+							<option class="option-select-menu" value="turnosDelDia.html">Turnos del dia</option>
 						</select>
 					</li>
 					<div class="border"></div>
