--- a/turnosDelDia.html
+++ b/turnosDelDia.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <title>¡Oh My Dog! - Solicitar turno</title>
+        <title>¡Oh My Dog! - Turnos</title>
 		<script>
 			function validarFecha() {
 				var fechaInput = document.getElementById("fecha").value;
 				var fechaSeleccionada = new Date(fechaInput);
 				var fechaActual = new Date();
-	
+                                <!-- ----------------------------------MODIFICAR ------------------------------------------ -->
 				if (fechaSeleccionada < fechaActual) {
 					alert("La fecha seleccionada debe ser mayor a la fecha actual.");
 					return false;
@@ -39,7 +39,7 @@
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
 							<option class="option-select-menu" value="listar-mis-turnos.html">Listar mis turnos</option>
-							<option class="option-select-menu" value="turnosDelDia.html">Turnos del dia</option>
+                            <option class="option-select-menu" value="turnosDelDia.html">Turnos del dia</option>
 						</select>
 					</li>
 					<li><a class="link-style-menu option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
@@ -61,27 +61,11 @@
 
 		<div class="body-sign-in-and-up">
             <form id="formulario" action="php/solicitar-turno.php" method="post" onsubmit="return validarFecha()" >
-                <label class="form-label">Solicitar turno</label><br>
+                <label class="form-label">Turnos del dia</label><br><br>
+                Seleccione un dia: <br>
                 <input type="date" id="fecha" name="fecha" class="input-style" placeholder="Fecha" required><br>
-                Servicio:
-                <select name="servicio" id="servicio" required>
-					<option value="aplicacion-vacuna">Aplicación de vacuna</option>
-                    <!--<option value="castracion">Castraci&oacute;n</option>                    
-					<option value="desparacitacion">Desparasitaci&oacute;n</option>
-					<option value="consulta-general">Consulta general</option>
-					<option value="urgencias">Urgencias</option>-->
-                </select> <br>
-                Horario:
-                <input type="radio" name="horario" value="Mañana" required>Mañana 
-                <input type="radio" name="horario" value="Tarde" required>Tarde <br>
-				<input type="hidden" name="email" id="email" value="">
-				<script>
-					email = document.getElementById("email");
-					email.value = localStorage.getItem("email");
-					console.log(email.value);
-				</script>
 				<p class="mensaje-error"></p>
-                <input type="submit" value="Enviar" id="submit-turno" class="continuar-y-registrarme-btn"> <br>
+                <input type="submit" value="Buscar" id="submit-turno" class="continuar-y-registrarme-btn"> <br>
             </form>
         </div>
     </body>
