--- a/verAdopciones.html
+++ b/verAdopciones.html
@@ -26,6 +26,7 @@
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
 							<option class="option-select-menu" value="listar-mis-turnos.html">Listar mis turnos</option>
+							<option class="option-select-menu" value="turnosDelDia.html">Turnos del dia</option>
 						</select>
 					</li>
 					<div class="border"></div>
