--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -33,18 +33,31 @@
 						<label class="link-style-menu">SERVICIOS</label>
 						<select onchange="if (this.value) window.location.href = this.value;">
 							<option class="option-select-menu" value="" selected disabled>Selecciona una opción</option>
+							<option class="option-select-menu" value="miPerfil.html">Mi perfil</option>
 							<option class="option-select-menu" value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
 							<option class="option-select-menu" value="cargarAdopcion.html">Registrar Perro para adopcion</option>
+							<option class="option-select-menu" value="formCampaniaDonacion.html">Registrar campaña de donacion</option>
+							<option class="option-select-menu" value="mostrarCampañasD.html">Mostrar campaña de donacion</option>
 							<option class="option-select-menu" value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
-							<option class="option-select-menu" value="listar-mis-turnos.html">Listar mis turnos</option>
+							<option class="option-select-menu" value="mostrarDonaciones.html">Mostrar Donaciones</option>
+							<option class="option-select-menu listar-turnos" value="listar-mis-turnos.html">Listar mis turnos</option>
+							<option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
 							<option class="option-select-menu" value="turnosDelDia.html">Turnos del dia</option>
 						</select>
 					</li>
-					<li><a class="link-style-menu option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu option-menu" href="contact-us.html">CONTACTO</a></li>
+					<li><a class="link-style-menu ver-usuarios option-menu" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu ocultar-nos option-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu ocultar-con option-con" href="contact-us.html">CONTACTO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu solicitar-turno option-menu" href="solicitar-turno.html">SOLICITAR TURNO</a></li>
+					<div class="border"></div>
+					<li><a class="link-style-menu stateSing registrar-menu option-menu" href="sign-up.html">REGISTRAR USUARIO</a></li>
+					<div class="border"></div>
 					<li><a class="link-style-menu stateLogOut" id="logOut" href="index.html">CERRAR SESION</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu stateLogOut" id="bienvenida">Bienvenido:</a></li>
