--- a/libretaVacunacion.html
+++ b/libretaVacunacion.html
@@ -3,20 +3,20 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
-		<title>¡Oh My Dog! - Realizar donacion</title>
+		<title>¡Oh My Dog! - Historia Clinica</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
-	<body>
+	<body class="adopcion">
 		<header>
-			<img src="img/Logo1-removebg-preview.png" id="imghome">
-			<div id="menu"> x
+			<a class="option-menu" href="index.html"><img src="img/Logo1-removebg-preview.png" id="imghome"></a>
+			<div id="menu">
 				<ul id="ul-style-menu">
 					<div class="border"></div>
-					<li><a class="link-style-menu option-menu" href="index.html">INICIO</a></li>
+					<li><a class="link-style-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
-                    <li>
+					<li>
 						<a class="link-style-menu">SERVICIOS</a>
 						<select onchange="if (this.value) window.location.href = this.value;">
 							<option class="option-select-menu" value="" selected disabled>Selecciona una opción</option>
@@ -57,30 +57,17 @@
 				</ul>
 			</div>
 		</header>
-
-		<div class="body-contenedor">
-			<form id="formulario" action="index.html" method="post">
-                <h1>Forma de pago</h1><br><hr><hr><br>
-                <label class="form-label">Nombre completo</label><br>
-                <input type="text" name="name" class="input-style" placeholder="Nombre" required><br>
-                <label class="form-label">Numero de Tarjeta</label><br>
-                <input type="number" name="numero" class="input-style" placeholder="Numero de tarjeta" required><br><br>
-                <label class="form-label">Fecha de vencimiento</label><br>
-                <input type="number" name="mes" placeholder="Mes" required>/
-				<input type="number" name="año" placeholder="año" required><br><br>
-                <label class="form-label">Codigo de Seguridad</label><br>
-                <input type="number" name="codigo" class="input-style" placeholder="CVC" required><br>				
-                <label class="form-label">Monto</label><br>
-                <select name="monto" class="input-style" required>
-					<option value="500">$500</option>
-					<option value="1000">$1000</option>
-					<option value="5000">$5000</option>
-				  </select><br>
-				<p class="mensaje-error"></p>
-				<input type="submit" id="submitLog" value="Realizar donacion" class="continuar-y-registrarme-btn">
-				
-			</form>
+        
+        <div class="body-contenedor" id="contenedorDatos">
+            <h1>Libreta De Vacunacion</h1><br>
+                <hr>
+                <div class="vacunaciones"></div>
+                <hr>
+                <div class="desparasitaciones"></div>
+                <hr>
         </div>
+        <script src="js/verLibretaVacunacion.js" type="module"></script>
+	    <script src="js/cambiarEstadoBotones.js"></script>
+	    <script src="js/cerrarSesion.js"></script>
 	</body>
-    <script src="js/validarDatosPago.js" type="module"></script>
 </html>
