--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -64,11 +64,11 @@
                 <input type="date" id="fecha" name="fecha" class="input-style" placeholder="Fecha" required><br><br>
                 Servicio:
                 <select name="servicio" id="servicio" required>
-					<option value="aplicacion-vacuna">Aplicación de vacuna</option>
-                    <!--<option value="castracion">Castraci&oacute;n</option>                    
-					<option value="desparacitacion">Desparasitaci&oacute;n</option>
-					<option value="consulta-general">Consulta general</option>
-					<option value="urgencias">Urgencias</option>-->
+					<option value="vacuna-enfermedad">Vacunación enfermedad</option>
+					<option value="vacuna-rabia">Vacunación rabia</option>
+                    <option value="castracion">Castraci&oacute;n</option>                    
+					<!--<option value="desparacitacion">Desparasitaci&oacute;n</option>
+					<option value="consulta-general">Consulta general</option>-->
                 </select> <br><br>
                 Horario:
                 <input type="radio" name="horario" value="Mañana" required>Mañana 
