--- a/registroConsulta.html
+++ b/registroConsulta.html
@@ -61,6 +61,11 @@
 		<div class="body-sign-in-and-up" id="regis-consulta">
 			<form id="formulario" action="index.html" method="post">
 				<label class="form-label">Registrar consulta</label><br><br>
+				Descuentos <br>
+				<select name="descuento" id="desc">
+					<option value="" selected disabled>Selecciona un monto</option>
+				</select><br><br>
+				<script src="js/listarDescuentos.js" type="module"></script> 
                 Servicio <br>
                 <input type="text" name="servicio" class="input-style" id="read-only" style="color: #808080;" readonly><br>
                 <script>
